# Sonality

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
benches/: composed_scenarios.py  conftest.py  integrated_harness.py  knowledge_harness.py  knowledge_scenarios.py  live_scenarios.py  psych_harness.py  psych_scenarios.py  scenario_contracts.py  scenario_runner.py  teaching_harness.py  teaching_scenarios.py  test_ess_calibration_live.py  test_fidelity.py  test_integrated_live.py  test_knowledge_acquisition_live.py  test_live.py  test_nct_live.py  test_psych_reflection.py  test_psych_stability_live.py  test_reflection_cleanup_live.py  test_scenario_contracts.py  test_teaching_harness.py  test_teaching_suite_live.py  test_trait_retention_live.py
data/: performance_assessment.md
docs/: api-reference.md  architecture-assessment.md  configuration.md  design-decisions.md  getting-started.md  index.md  model-considerations.md  personality-development.md  project-structure.md  testing.md  training-guide.md  usage-and-teaching-plan.md
docs/architecture/: data-flow.md  memory-model.md  overview.md  research-upgrade-plan.md
docs/concepts/: anti-sycophancy.md  ess.md  opinion-dynamics.md  (+1 more)
scripts/: init_postgres.sql
sonality/: agent.py  cli.py  config.py  ess.py  openrouter.py  prompts.py  provider.py  server.py
tests/: conftest.py  test_agent_health.py  test_behavioral.py  test_episodes.py  test_ess_parsing.py  test_live_graduated.py  test_memory_health.py  test_sponge.py
(+86 files in other folders)
